deploy travis artefacts to s3

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ install:
 
 script:
   - npm run build
+
+addons:
+  artifacts: true
+  s3_region: "eu-central-1"
+  artifacts:
+    path:
+      - ./build
